add new login popup

--- a/1.html
+++ b/1.html
@@ -1,1 +1,61 @@
 <!-- Login page -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>git-login page</title>
+    <style>
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #e2dddd;
+        }
+       .login-card {
+        width: 300px;
+        height: 250px;
+        border: none;
+        border-radius: 10px;
+        box-shadow: 0px 9px 30px #454343;
+        margin-top: 100px;
+        background-color: #ffffff;
+
+       } 
+       
+       h2 {
+        text-align: center ;
+       }
+       input {
+        border: none;
+        border-bottom: 1px solid black;
+        width: 80%;
+        margin-left: 10%;
+        margin-right: 10%;
+        padding-bottom: 15px;
+       }
+       button {
+        margin-left: 10%;
+        width: 244px;
+        height: 35px;
+        color: white;
+        background-color: blue;
+        border: none;
+        border-radius: 5px;
+       }
+
+    </style>
+</head>
+<body>  
+    <div class="login-card">
+        <h2>Login</h2>
+        <input class="username" type="Username" placeholder="Username">
+        <br>
+        <br>
+        <input class="password" type="password" placeholder="password">
+        <br>
+        <br>
+        <button>Submit</button>
+    </div>
+</body>
+</html>
